[workspace]
resolver = "2"
members = [
    "boards/picoboy",
    "boards/picoboy-color"
]

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
panic-halt= "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.0"
sh1106 = "0.4.0"
st7789 = "0.6.1"
