[workspace]
resolver = "2"
members = ["boards/picoboy", "boards/picoboy-color"]

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
fugit = "0.3.7"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.11.0"
sh1106 = "0.5.0"
mipidsi = "0.9.0"
